# contracts/openapi.v1.json
@@ -2649,13 +2649,6 @@
             "items": {
               "$ref": "#/components/schemas/ParcelView"
             }
-          },
-          "revealAtMs": {
-            "type": [
-              "null",
-              "integer"
-            ],
-            "format": "int64"
           }
         }
       },
